Bug 99338 - Crash when opening border style and arrowhead style dropdown selector in Calc and Writer
Summary: Crash when opening border style and arrowhead style dropdown selector in Calc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-04-15 21:26 UTC by Robert Gonzalez MX
Modified: 2017-02-16 15:25 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshoots and descriptions (121.79 KB, application/vnd.oasis.opendocument.text)
2016-04-15 21:27 UTC, Robert Gonzalez MX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2016-04-15 21:26:30 UTC
Hi there.
Testing around the color properties dropdown windows found that LO crashes in this two dropdown selectors:

The border style in calc and the arrowhead style in writer when the format object toolbar is activated with the drawing icon of the standard toolbar.


Steps to reproduce
Create a new writer document
click on the basic shapes icon in the standard toolbar
click to open the arrow style dropdown window in the drawing object toolbar
click again in the arrow style to close it
LibreOffice crashes.

Create a new spreadsheet
click to open the border style dropdown window in the format toolbar
click again to close it
LibreOffice crashes.

Tested with Version: 5.2.0.0.alpha0+
Build ID: 92d7fef02574051826e46a3a7e3d33a1afa062d7
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-04-14_03:18:53
Locale: es-MX (es_MX)
On Windows 10

and

Version: 5.2.0.0.alpha0+
Build ID: d6bf3bcd8b51012d55a2ec962800a8549e2b85e1
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-15_06:46:09
Locale: es-MX (es_MX)
Comment 1 Robert Gonzalez MX 2016-04-15 21:27:43 UTC
Created attachment 124376 [details]
screenshoots and descriptions
Comment 2 raal 2016-04-20 20:51:39 UTC
Thanks for the report, I can confirm with Version: 5.2.0.0.alpha0+
Build ID: 170a473597534cf59887b1d817538322e7039862
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-04-19_00:41:06
Comment 3 Robert Gonzalez MX 2016-04-20 20:56:37 UTC
OK.

Just tested it with Version: 5.2.0.0.alpha0+
Build ID: 5bb308a9ad16f6002486a60e4a753693818580b6
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-20_19:07:06
Locale: es-MX (es_MX)

and is still reproducible
Comment 4 Armin Le Grand (collabora) 2016-04-22 07:52:22 UTC
mstahl: May be realted to nullptr's in method creation (some days ago)
Comment 5 raal 2016-04-22 08:55:57 UTC
note: bibisect5.2 - fails to run, dozens of skipped commits
Comment 6 Julien Nabet 2016-05-01 17:00:48 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
Perhaps already fixed?
Comment 7 Peter 2016-05-01 17:49:05 UTC
Those, who are on Linux, what desktop environment are you using? I had similar problem (Calc crashed after I applied borders do cells.) with older versions of LibreOffice. If I remember correctly, problem showed up mostly/only on i3wm. (I can't find that report.) Maybe it's worth trying newest version of LO on i3wm.
Comment 8 Julien Nabet 2016-05-01 17:59:38 UTC
I reproduce neither with gtk3 (by default) nor with SAL_USE_VCLPLUGIN=gen
Comment 9 Peter 2016-05-01 18:08:37 UTC
To add to my previous comment:
I found bug report I mentioned. It's Bug 93487.
It's been closed, and I can confirm that it is fixed. But it is very similar to this bug. (Back then I thought that problem with applying borders and problem with setting border style are the same bug.) Comments on Bug 93487 doesn't mention explicitly i3wm, but it looks like problem was dependent on window manager used.

(I'm not saying that current bug is definitely dependent on window manager. I'm just guessing. If it is already fixed I would be happy.)
Comment 10 Robert Gonzalez MX 2016-05-01 20:28:52 UTC
Hi to all.

Just tested it again with Version: 5.2.0.0.alpha1+
Build ID: 2e2781d0541dcbf3104973068905a55752c358e5
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-28_15:13:18
Locale: es-MX (es_MX)
On Windows 10 and Windows XP SP3 and is still reproducible.

Also tested it with Version: 5.2.0.0.alpha1+
Build ID: 039b75d6cdc26dcce03e37c67115405e6f2a8ebe
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-05-01_00:34:51
Locale: es-MX (es_MX)
On Windows 10 and it is still reproducible.

In Calc, when the drop panel of the border line style opens, if it is undocked from the toolbar, it is usable, but closing the window with the X at the upper right corner, still crashes.

In Writer, the same happens with the arrow style drop down selector.
Comment 11 Commit Notification 2016-05-01 21:26:19 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=097bf754c09e8b1ba57e3367baa010898611b61b

tdf#99338 Fix GrabFocus during dispose crashes

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.