tdf#99338 Fix GrabFocus during dispose crashes

Change-Id: I309e1e5f0d28c408c8a95190bf645abf680491b6